Fix Config Bugs
- Fix a bug where the program didn't get  all the values from the config file.
- Add 'morgan' for logging.

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,9 @@
 doctype html
 html
     head
-        title Authorisation
+        title Authorisation Consumer
     body
+        h1 Authentication Consumer 
         if user
             div #[a(href=auth.getLogin(location.url)) login] 
             div #[a(href=auth.getLogout(location.url)) logout]
