--- a/views/loggedIn.pug
+++ b/views/loggedIn.pug
@@ -9,6 +9,7 @@ html
             div #[a(href=auth.getLogout(location.url)) logout]
         else
             div #[a(href=auth.getLogin(location.url)) login] 
+        div #[a(href=auth.getLogin(location.url) + "&multi=true") Multiple Login]
 
         if user
             p= JSON.stringify(user, null, 4)
